--- a/styles.css
+++ b/styles.css
@@ -26,13 +26,13 @@ header {
 header h1 {
   font-size: 2.2rem; /* Reduced font size */
   font-weight: 600;
-  color: #000;
+  color: #FFF;
   margin-bottom: 8px;
 }
 
 header p {
   font-size: 1rem;
-  color: #000;
+  color: #fff;
   margin-top: 5px;
 }
 
@@ -115,7 +115,7 @@ footer p {
   opacity: 0.6;
   font-size: 0.8rem;
   margin-top: 10px;
-  color: #444;
+  color: #fff;
   text-align: center;
 }
 
